update service name in http route

--- a/gateway-api/http-route.yaml
+++ b/gateway-api/http-route.yaml
@@ -17,5 +17,5 @@ spec:
         type: PathPrefix
         value: /
     backendRefs:
-    - name: webapp-svc
+    - name: webapp-v1-svc
       port: 80
